<resources>
    <string name="app_name">KneeApp</string>
    <string name="app_description">"    Приложение предназначено для пациентов, перенесших операцию по"
        замене коленного сустава. В данном приложении вы:\n
        "   - Еженедельно заполняете анкету Oxford Knee Score для определения вашего состояния и улучшений после тренировок.\n"
        По ее результатам составляется отчет, в котором также указывается, сколько тренировок вы сделали
        за неделю.\n
        "   - В течение недели между заполнениями анкеты ежедневно выполняете упражнения для реабилитации после операции по эндопротезированию"
        коленного сустава, отмечаете их выполнение и следите за своим прогрессом.\n
        "   - В случае экстренной ситуации можете связаться с вашим лечащим врачом через пункт меню \"Обратная связь\".\n\n"
           "    "Для навигации в приложении используйте выдвижное меню в левом верхнем углу.\n\n
        "    "Источник упражнений и рекомендаций - Тотальное эндопротезирование коленного сустава :
        пособие для пациентов. – СПб. : РНИИТО им. Р.Р. Вредена, 2013. – 16 с.\n
    </string>
    <string name="main_menu_run_oks">Заполнить анкету Oxford Knee Score</string>
    <string name="question_number">1</string>
    <string name="question_text">Вопрос 1</string>
    <string name="variant_1">Вариант 1</string>
    <string name="variant_2">Вариант 2</string>
    <string name="variant_3">Вариант 3</string>
    <string name="variant_4">Вариант 4</string>
    <string name="variant_5">Вариант 5</string>
    <string name="button_text">Следующий вопрос</string>
    <string name="question_number_text">Вопрос</string>
    <string name="send">Отправить</string>
    <string name="question1">Как бы Вы описали боли в колене, которые Вы обычно испытываете?</string>
    <string name="question2">Испытывали ли Вы неудобства при мытье и вытирании полотенцем (всего тела) из-за колена?</string>
    <string name="question3">Испытывали ли Вы неудобства при посадке и высадке из машины или при
использовании общественного транспорта (в зависимости от того, чем Вы пользуетесь) из-за
колена?</string>
    <string name="question4">Как долго вы могли идти до тех пор, пока боли в колене не становились сильными
(с тростью или без)?</string>
    <string name="question5">Насколько больно из-за колена для Вас было вставать со стула после еды (посидев
за столом)?</string>
    <string name="question6">Хромали ли Вы во время ходьбы из-за колена?</string>
    <string name="question7">Могли ли Вы встать на колени и подняться после этого?</string>
    <string name="question8">Беспокоили ли Вас боли в колене по ночам в постели?</string>
    <string name="question9">Насколько боли в колене мешали выполнять Вашу обычную работу (в том числе
работу по дому)?</string>
    <string name="question10">Ощущали ли вы, что колено может внезапно прогибаться или подкашиваться?</string>
    <string name="question11">Могли ли вы самостоятельно покупать еду и бытовые товары?</string>
    <string name="question12">Могли ли Вы спуститься по лестнице на один этаж?</string>
    <string name="question1option1">1) Нет болей</string>
    <string name="question1option2">2) Очень лёгкие</string>
    <string name="question1option3">3) Лёгкие</string>
    <string name="question1option4">4) Умеренные</string>
    <string name="question1option5">5) Сильные</string>
    <string name="question2option1">1) Никаких неудобств</string>
    <string name="question2option2">2) Совсем небольшие</string>
    <string name="question2option3">3) Умеренные</string>
    <string name="question2option4">4) Очень выраженные</string>
    <string name="question2option5">5) Невозможно это делать</string>
    <string name="question3option1">1) Никаких неудобств</string>
    <string name="question3option2">2) Совсем небольшие</string>
    <string name="question3option3">3) Умеренные</string>
    <string name="question3option4">4) Очень выраженные</string>
    <string name="question3option5">5) Невозможно это делать</string>
    <string name="question4option1">1) Нет болей/более 30 мин</string>
    <string name="question4option2">2) От 16 до 30 мин</string>
    <string name="question4option3">3) От 5 до 15 мин</string>
    <string name="question4option4">4) Только по дому</string>
    <string name="question4option5">5) Нисколько - сильные боли при ходьбе</string>
    <string name="question5option1">1) Совсем не больно</string>
    <string name="question5option2">2) Лёгкая боль</string>
    <string name="question5option3">3) Умеренная боль</string>
    <string name="question5option4">4) Сильная боль</string>
    <string name="question5option5">5) Нестерпимая боль</string>
    <string name="question6option1">1) Редко/никогда</string>
    <string name="question6option2">2) Иногда или только поначалу</string>
    <string name="question6option3">3) Часто, не только поначалу</string>
    <string name="question6option4">4) Большую часть времени</string>
    <string name="question6option5">5) Всё время</string>
    <string name="question7option1">1) Да, с легкостью</string>
    <string name="question7option2">2) С небольшими затруднениями</string>
    <string name="question7option3">3) С умеренными затруднениями</string>
    <string name="question7option4">4) С чрезвычайными затруднениями</string>
    <string name="question7option5">5) Нет, это невозможно</string>
    <string name="question8option1">1) Ни одну ночь</string>
    <string name="question8option2">2) Только 1 или 2 ночи</string>
    <string name="question8option3">3) Некоторые ночи</string>
    <string name="question8option4">4) Большинство ночей</string>
    <string name="question8option5">5) Каждую ночь</string>
    <string name="question9option1">1) Совсем не мешали</string>
    <string name="question9option2">2) Немного</string>
    <string name="question9option3">3) Умеренно</string>
    <string name="question9option4">4) Сильно</string>
    <string name="question9option5">5) Не позволяли выполнять</string>
    <string name="question10option1">1) Редко/никогда</string>
    <string name="question10option2">2) Иногда или только поначалу</string>
    <string name="question10option3">3) Часто, не только поначалу</string>
    <string name="question10option4">4) Большую часть времени</string>
    <string name="question10option5">5) Всё время</string>
    <string name="question11option1">1) Да, с легкостью</string>
    <string name="question11option2">2) С небольшими затруднениями</string>
    <string name="question11option3">3) С умеренными затруднениями</string>
    <string name="question11option4">4) С чрезвычайными затруднениями</string>
    <string name="question11option5">5) Нет, это невозможно</string>
    <string name="question12option1">1) Да, с легкостью</string>
    <string name="question12option2">2) С небольшими затруднениями</string>
    <string name="question12option3">3) С умеренными затруднениями</string>
    <string name="question12option4">4) С чрезвычайными затруднениями</string>
    <string name="question12option5">5) Нет, это невозможно</string>
    <string name="medical_card_id">ID медицинской карты:</string>
    <string name="medical_card_id_hint">12345678ABCD</string>
    <string name="to_continue">Продолжить</string>
    <string name="patient_not_found">Пациент с таким ID медицинской карты не найден
    или данный пациент не проходил операцию по эндопротезированию коленного сустава</string>
    <string name="user_already_registered">Пользователь с данным ID медицинской карты
        уже зарегистрирован в приложении. Пожалуйста, проследуйте на страницу
        входа в приложение</string>
    <string name="sent_email_verification_part_1">"Почти готово! На ваш адрес электронной почты "</string>
    <string name="sent_email_verification_part_2">" "было послано письмо с подтверждением.
        Для подтверждения вашей личности нажмите на ссылку в письме.
        После этого вы сможете войти в приложение с адресом электронной почты, на которую вам
        пришло письмо с подтверждением."</string>
    <string name="could_not_get_email">Не удалось получить email пациента с данным
        ID медицинской карты</string>
    <string name="registration_step1">Шаг 1</string>
    <string name="Login">Войти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register"><u>Зарегистрироваться</u></string>
    <string name="not_yet_registered">Еще не зарегистрированы?</string>
    <string name="email_hint">yourname@gmail.com</string>
    <string name="password_hint">********</string>
    <string name="registration_step2">Шаг 2</string>
    <string name="enter_password">Придумайте пароль:</string>
    <string name="finish">Зарегистрироваться</string>
    <string name="enter_password_again">Введите пароль снова:</string>
    <string name="registration_success">Успех!</string>
    <string name="back">Вернуться</string>
    <string name="successful_registration_message">Вы успешно зарегистрировались в приложении!
        Осталось только подтвердить электронную почту.</string>
    <string name="passwords_dont_match">Пароли не совпадают.</string>
    <string name="user_already_registered_short">Пациент с данным ID медицинской карты уже зарегистрирован.</string>
    <string name="invalid_name_or_password">Неверное имя пользователя или пароль.</string>
    <string name="server_not_responding">Не удалось соединиться с сервером.</string>
    <string name="wrong_username_or_password">Неверное имя пользователя или пароль.</string>
    <string name="shared_preferences_file_name">KneeApp</string>
    <string name="choose_an_option_error">Пожалуйста, выберите вариант ответа.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="menu_home">Главная</string>
    <string name="menu_oks">Анкета OKS</string>
    <string name="menu_training">Тренировки</string>
    <string name="max_timer_value">7:00:00:00</string>
    <string name="next_test_in">Заполните следующую анкету через</string>
    <string name="menu_feedback">Обратная связь</string>
    <string name="day_1">День 1</string>
    <string name="day_2">День 2</string>
    <string name="day_3">День 3</string>
    <string name="day_4">День 4</string>
    <string name="day_5">День 5</string>
    <string name="day_6">День 6</string>
    <string name="day_7">День 7</string>
    <string name="oks_result_example">30/48</string>
    <string name="oks_result_is">Результат анкеты Oxford Knee Score:</string>
    <string name="results_of_exercises_for_last_week">Результат выполнения упражнений за
        прошедшую неделю:</string>
    <string name="exercise_1">Упр. 1</string>
    <string name="previous_result">Предыдущий результат:</string>
    <string name="good_outcome">"    "Ваш результат является довольно хорошим, но все же может
    указывать на наличие у вас воспаления коленного сустава. Обязательно следите за тем, чтобы
    ваше состояние не ухудшилось. Если боли усилятся, то обратитесь за помощью к вашему лечащему
    врачу. Для ускорения восстановления ежедневно выполняйте упражнения, указанные в меню
    \"Тренировки\".</string>
    <string name="test_oks_explanation"><b>Анкета Oxford Knee Score (OKS)</b> - это короткая анкета, которая состоит из 12 вопросов, и
        используется для измерения боли и функции коленного сустава для пациентов с
        гонартрозом. Данная анкета широко используется для определения состояния пациента и
        оценки его реабилитации после операции по тотальному эндопротезированию коленного сустава. Каждый вопрос оценивается от 0 до 4 баллов.
        Максимальный общий балл (самый лучший результат) - 48. Вам необходимо стремиться к его достижению.</string>
</resources>