<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.ActivityOksReport"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTrainingResultsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/results_of_exercises_for_last_week"
            android:textColor="@color/black" />

        <TableLayout
            android:id="@+id/table_layout_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="5dp"
                    android:text="@string/exercise_1"
                    android:textColor="@color/soft_background"
                    android:textSize="12sp" />

                <TextView
                    android:padding="5dp"
                    android:text="@string/day_1"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:padding="5dp"
                    android:text="@string/day_2"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:padding="5dp"
                    android:text="@string/day_3"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:padding="5dp"
                    android:text="@string/day_4"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:padding="5dp"
                    android:text="@string/day_5"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:padding="5dp"
                    android:text="@string/day_6"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:padding="5dp"
                    android:text="@string/day_7"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>

        <ProgressBar
            android:id="@+id/progressBarOksReport"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/textViewOksResultsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oks_result_is"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textViewOksReportResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oks_result_example"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="9dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textViewPreviousResultStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_result"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/textViewOksReportPrevResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oks_result_example"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="9dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewOksReportExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/good_outcome"
            android:textColor="@color/black"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/buttonOksReportBack"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/back"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="40dp"
            android:layout_gravity="end" />
    </LinearLayout>
</ScrollView>