<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.leti.kneeapp.activity.main_activity.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_oks"
        android:name="ru.leti.kneeapp.activity.main_activity.OksFragment"
        android:label="@string/menu_oks"
        tools:layout="@layout/fragment_oks" />

    <fragment
        android:id="@+id/nav_training"
        android:name="ru.leti.kneeapp.activity.main_activity.TrainingFragment"
        android:label="@string/menu_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="ru.leti.kneeapp.activity.main_activity.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback"/>
</navigation>