<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TestPageActivity"
    android:background="@color/soft_background">

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.070" />

    <TextView
        android:id="@+id/question_text_textview"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/question_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_textview"
        app:layout_constraintVertical_bias="0.065" />

    <RadioGroup
        android:id="@+id/variants_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text_textview">

        <RadioButton
            android:id="@+id/option_1_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variant_1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/option_2_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variant_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/option_3_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variant_3"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/option_4_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variant_4"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/option_5_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variant_5"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/next_question_button"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/brown"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/variants_radiogroup"
        app:layout_constraintVertical_bias="0.423" />

    <ProgressBar
        android:id="@+id/next_question_progress_bar_test_page_activity"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/next_question_button"
        app:layout_constraintEnd_toEndOf="@+id/next_question_button"
        app:layout_constraintStart_toStartOf="@+id/next_question_button"
        app:layout_constraintTop_toTopOf="@+id/next_question_button" />

    <TextView
        android:id="@+id/question_number_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/question_textview"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/question_textview" />

    <TextView
        android:id="@+id/error_message_test_page_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:textSize="16sp"
        android:text="@string/choose_an_option_error"
        android:textColor="@color/errorRed_alternative"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/next_question_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/variants_radiogroup" />
</androidx.constraintlayout.widget.ConstraintLayout>