<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EnterMedicalCardIdActivity"
    android:background="@color/soft_background">

    <TextView
        android:id="@+id/to_register_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/blue_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_account_textview"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/no_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_yet_registered"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_login_button"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/app_name_textview_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/to_login_button"
        app:layout_constraintEnd_toEndOf="@+id/to_login_button"
        app:layout_constraintStart_toStartOf="@+id/to_login_button"
        app:layout_constraintTop_toTopOf="@+id/to_login_button" />

    <Button
        android:id="@+id/to_login_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintVertical_bias="0.23" />

    <EditText
        android:id="@+id/email_address_edittext"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textview_login_activity"
        app:layout_constraintVertical_bias="0.00" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textview_login_activity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/email_textview_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/gray"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/email_address_edittext"
        app:layout_constraintTop_toBottomOf="@+id/app_name_textview_login_activity" />

    <TextView
        android:id="@+id/password_textview_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/email_address_edittext"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/error_message_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_name_or_password"
        android:visibility="invisible"
        android:textColor="@color/error_red"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toTopOf="@+id/login_progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>