<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.main_activity.OksFragment"
        android:background="@color/soft_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/test_oks_explanation_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/test_oks_explanation"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.184" />

        <TextView
            android:id="@+id/text_on_timer_to_next_oks_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_test_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/test_oks_explanation_textview"
            app:layout_constraintVertical_bias="0.135" />

        <TextView
            android:id="@+id/timer_to_next_oks_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_timer_value"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_on_timer_to_next_oks_textview"
            app:layout_constraintVertical_bias="0.064" />

        <Button
            android:id="@+id/run_oks_button"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/brown"
            android:text="@string/main_menu_run_oks" />
    </LinearLayout>
</ScrollView>